--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "favorite-books",
   "private": true,
   "dependencies": {
+    "@material/drawer": "^13.0.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.4-1",
     "@rails/activestorage": "^6.0.0",
